--- a/app/src/main/res/layout/item_note_bobina.xml
+++ b/app/src/main/res/layout/item_note_bobina.xml
@@ -48,8 +48,8 @@
                     android:id="@+id/textView8"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:text="ProveedorNombre"
+                    android:layout_weight="1"
+                    android:text="Proveedor"
 
                     android:textSize="12sp"
                     android:textStyle="bold" />
@@ -59,12 +59,40 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="1"
+                    android:text="proveedor"
                     android:textColor="@color/white"
                     android:textSize="16sp"
                     android:textStyle="bold" />
             </LinearLayout>
 
+
+            <LinearLayout
+                android:id="@+id/ly_NombreTipoMaterial"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textView131"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="Material"
+
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/item_bobina_txt_NombreTipoMaterial"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="1"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
             <LinearLayout
                 android:id="@+id/ly_Lote"
                 android:layout_width="match_parent"
@@ -76,7 +104,7 @@
                     android:id="@+id/textView9"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="2"
+                    android:layout_weight="1"
                     android:text="Lote"
 
                     android:textSize="12sp"
@@ -104,7 +132,7 @@
                     android:id="@+id/textView10"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="2"
+                    android:layout_weight="1"
                     android:text="Ancho"
 
                     android:textSize="12sp"
@@ -112,35 +140,6 @@
 
                 <TextView
                     android:id="@+id/item_bobina_txt_Ancho"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="1"
-                    android:textColor="@color/white"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/ly_TipoMaterialId"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1.2"
-                android:orientation="vertical"
-                android:visibility="gone">
-
-                <TextView
-                    android:id="@+id/textView11"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:text="TipoMaterialId"
-
-                    android:textSize="12sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/item_bobina_txt_TipoMaterialId"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -161,8 +160,8 @@
                     android:id="@+id/textView12"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:text="DefectuosaKg"
+                    android:layout_weight="1"
+                    android:text="Defectuoso Kg"
 
                     android:textSize="12sp"
                     android:textStyle="bold" />
@@ -189,8 +188,8 @@
                     android:id="@+id/textView13"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:text="EsAbiertaoCerrada"
+                    android:layout_weight="1"
+                    android:text="Estado"
 
                     android:textSize="12sp"
                     android:textStyle="bold" />
